OO-6514: migrate lock and course db to annotations mapping